# libstuff

./: CMakeLists.txt  LICENSE  README.md  _clang-format
include/stuff/: string.h
test/: string.cxx
